--- a/internal/frontend/templates/index.html
+++ b/internal/frontend/templates/index.html
@@ -1,4 +1,5 @@
 {{ template "header.html" }}
-{{ template "menu.html" }}
+{{ template "menu.html" . }}
 {{ template "inputForm.html" }}
+{{ template "results.html" . }}
 {{ template "footer.html" }}
