--- a/internal/frontend/templates/header.html
+++ b/internal/frontend/templates/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Меню</title>
+    <title>GoComputeFlow</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <!--    <link rel="stylesheet" href="styles.css">-->
 </head>
