--- a/internal/frontend/templates/results.html
+++ b/internal/frontend/templates/results.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container mt-1">
+    <h5 class="text-center">Отображение последних {{ .count_expression }} выражений </h5>
     <table class="table table-striped">
         <thead>
         <tr>
