Добавлен вывод информационного сообщения.

--- a/internal/frontend/templates/index.html
+++ b/internal/frontend/templates/index.html
@@ -1,5 +1,5 @@
 {{ template "header.html" }}
 {{ template "menu.html" . }}
-{{ template "inputForm.html" }}
+{{ template "inputForm.html" . }}
 {{ template "results.html" . }}
 {{ template "footer.html" }}
