--- a/internal/frontend/templates/header.html
+++ b/internal/frontend/templates/header.html
@@ -5,5 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GoComputeFlow</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<!--    <link rel="stylesheet" href="styles.css">-->
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
