Добавлен шаблоны мониторинга пингов вычислителей

--- a/internal/frontend/templates/menu.html
+++ b/internal/frontend/templates/menu.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="#">Таймауты</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Мониторинг</a>
+                <a class="nav-link" href="/monitoring">Мониторинг</a>
             </li>
             {{ if .is_logged_in }}
             <li class="nav-item">
