--- a/internal/frontend/templates/menu.html
+++ b/internal/frontend/templates/menu.html
@@ -9,10 +9,7 @@
                 <a class="nav-link" href="/">Главная</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Результаты</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Таймауты</a>
+                <a class="nav-link" href="/changeTimeouts">Таймауты</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/monitoring">Мониторинг</a>
