поле ввода выражения обязательное

--- a/internal/frontend/templates/inputForm.html
+++ b/internal/frontend/templates/inputForm.html
@@ -2,7 +2,8 @@
     <form class="form" action="/" method="POST">
         <div class="form-group">
             <label for="expressionInput">Введите выражение</label>
-            <input type="text" class="form-control" id="expressionInput" name="expression" placeholder="выражение">
+            <input type="text" class="form-control" id="expressionInput" name="expression" placeholder="выражение"
+                   required>
             <small id="expressionHelp" class="form-text text-muted">Поддерживаются операции +,-,*,/. Скобки и другие
                 операции недоступны.</small>
         </div>
