--- a/internal/frontend/templates/menu.html
+++ b/internal/frontend/templates/menu.html
@@ -5,13 +5,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item {{ if eq .activePage "Home" }}active{{ end }}">
                 <a class="nav-link" href="/">Главная</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {{ if eq .activePage "Timeouts" }}active{{ end }}">
                 <a class="nav-link" href="/changeTimeouts">Таймауты</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {{ if eq .activePage "Monitoring" }}active{{ end }}">
                 <a class="nav-link" href="/monitoring">Мониторинг</a>
             </li>
             {{ if .is_logged_in }}
