--- a/internal/frontend/templates/header.html
+++ b/internal/frontend/templates/header.html
@@ -7,3 +7,4 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
+<body>
